--- a/dot_shrc.tmpl
+++ b/dot_shrc.tmpl
@@ -9,10 +9,21 @@ export EDITOR=hx
 {{- if eq .chezmoi.os "darwin" }}
 {{ else if eq .chezmoi.os "linux" }}
 set -V # vi mode
+# prompt
 if [ "$(id -u)" -ne 0 ]; then
 	PS1='[\[\e[32m\]\u@\h \W\[\e[0m\]]\$ '
 else
 	#root
 	PS1='[\[\e[31m\]\u@\h \w\[\e[0m\]]# '
 fi
+# set window titles
+case ${TERM} in
+st* | alacritty | foot | xterm* | rxvt* | kitty | kterm | gnome*)
+	PROMPT_COMMAND=${PROMPT_COMMAND:+$PROMPT_COMMAND; }'printf "\033]0;%s:%s\007"   "${PWD/#$HOME/\~}"'
+	export COLORTERM=truecolor
+	;;
+tmux* | screen*)
+	PROMPT_COMMAND=${PROMPT_COMMAND:+$PROMPT_COMMAND; }'printf "\033]0;%s:%s\007"   "tmux: ${PWD/#$HOME/\~}"'
+	;;
+esac
 {{- end }}
