--- a/dot_profile.tmpl
+++ b/dot_profile.tmpl
@@ -1,12 +1,16 @@
 #!/usr/bin/sh
 # Managed within chezmoi https://github.com/mwyvr/dotfiles
-# User-specific environment sourced by shells
+#
+# Note:
+# ~/.profile is read by login shells after /etc/profile,
+# and should contain commands to be executed only at login time.
+# This file is sourced by sh/dash and bash shells.
+
 {{ if eq .chezmoi.os "darwin" }}
 
 {{ else if eq .chezmoi.os "linux" }}
-# blast that caps lock away in Wayland too 
-export XKB_DEFAULT_OPTIONS=ctrl:nocaps
-export TERM=alacritty
+# Set our shell rc file for interactive shells:
+ENV=$HOME/.shrc; export ENV
 
 if [ "$(id -u)" -ne 0 ]; then
 	mkdir -p $HOME/go/bin $HOME/.local/bin
@@ -17,18 +21,14 @@ if [ "$(id -u)" -ne 0 ]; then
 	fi
 fi
 	{{-   if eq .chezmoi.osRelease.id "chimera" }}
-# using the Chimera default sh (Almquist) shell, not bash
-ENV=$HOME/.shrc; export ENV
 	{{- else if eq .chezmoi.osRelease.id "void" }}
-		# per-user dbus setup as runit service
-		export DBUS_SESSION_BUS_ADDRESS="$(cat $HOME/.cache/dbus-address)"
-		# default for local users; allows non-root to do `virsh list` and see all vms
-			export LIBVIRT_DEFAULT_URI="qemu:///system"
-			export MOZ_ENABLE_WAYLAND=1
-		ADW_DISABLE_PORTAL=1
-		export ADW_DISABLE_PORTAL
-		# nodejs - global packages per user, avoids need for sudo in: npm i -g <pkgname>
-		# https://docs.npmjs.com/resolving-eacces-permissions-errors-when-installing-packages-globally
-		# export NPM_CONFIG_PREFIX=~/.npm-global
+# wlr-roots
+export XKB_DEFAULT_OPTIONS=ctrl:nocaps
+	# per-user dbus setup as runit service
+# TODO: CLEANUP
+export LIBVIRT_DEFAULT_URI="qemu:///system"
+# export MOZ_ENABLE_WAYLAND=1
+# ADW_DISABLE_PORTAL=1
+# export ADW_DISABLE_PORTAL
 	{{- end }}
 {{- end }}
