--- a/dot_shrc.tmpl
+++ b/dot_shrc.tmpl
@@ -1,21 +1,22 @@
 #!/usr/bin/sh
-# shrc is for sh, originally written by Kenneth Almquist
 # Managed within chezmoi https://github.com/mwyvr/dotfiles
-
+# shrc is set for interactive shells in ~/.profile to support derivatives of the
+# Almquist shell, sh, and dash as well as bash.
 . $HOME/.alias
-
 export EDITOR=hx
 
 {{- if eq .chezmoi.os "darwin" }}
 {{ else if eq .chezmoi.os "linux" }}
 set -V # vi mode
-# prompt
+# prompt; supported in Chimera's sh; also dash and bash
 if [ "$(id -u)" -ne 0 ]; then
 	PS1='[\[\e[32m\]\u@\h \W\[\e[0m\]]\$ '
 else
 	#root
 	PS1='[\[\e[31m\]\u@\h \w\[\e[0m\]]# '
 fi
+	{{-   if eq .chezmoi.osRelease.id "chimera" }}
+	{{- else if eq .chezmoi.osRelease.id "void" }}
 # set window titles
 case ${TERM} in
 st* | alacritty | foot | xterm* | rxvt* | kitty | kterm | gnome*)
@@ -26,4 +27,5 @@ tmux* | screen*)
 	PROMPT_COMMAND=${PROMPT_COMMAND:+$PROMPT_COMMAND; }'printf "\033]0;%s:%s\007"   "tmux: ${PWD/#$HOME/\~}"'
 	;;
 esac
+    {{- end }}
 {{- end }}
