--- a/dot_shrc.tmpl
+++ b/dot_shrc.tmpl
@@ -3,23 +3,28 @@
 #
 # ~/.shrc is set for interactive shells in ~/.profile
 
-. $HOME/.alias
-export EDITOR=hx # migrated to Helix from Neovim
+# hard to find a portable way to do this
+# case  $- in
+#  *i*) ;; # interactive shell
+#  *) return;;
+#esac
+
+test -s ~/.alias && . ~/.alias || true
+set -o vi
 
 {{- if eq .chezmoi.os "darwin" }}
 {{/* no op */}}
 {{ else if eq .chezmoi.os "linux" }}
-set -o vi
-
-# prompt; supported by Chimera's sh; also bash
+# freebsd/chimera linux sh, bash: set prompt
 if [ "$(id -u)" -ne 0 ]; then
 	PS1='[\[\e[32m\]\u@\h \W\[\e[0m\]]\$ '
 else
 	PS1='[\[\e[31m\]\u@\h \w\[\e[0m\]]# ' #root
 fi
 
- echo $SHELL | grep -q bash
- if [ $? -eq 0]; then # set window titles
+ # bash only: set window titles
+ echo $SHELL | grep -q bash 
+ if [ $? -eq 0 ]; then 
     case ${TERM} in
     st* | alacritty | foot | xterm* | rxvt* | kitty | kterm | gnome*)
         PROMPT_COMMAND=${PROMPT_COMMAND:+$PROMPT_COMMAND; }'printf "\033]0;%s:%s\007"   "${PWD/#$HOME/\~}"'
