support void,chimera,openSUSE

--- a/dot_alias.tmpl
+++ b/dot_alias.tmpl
@@ -1,23 +1,16 @@
 #!/usr/bin/sh
 # Managed within chezmoi https://github.com/mwyvr/dotfiles
-{{ if eq .chezmoi.os "darwin" }}
 
-{{ else if eq .chezmoi.os "linux" }}
-	{{- if ne .chezmoi.osRelease.id "chimera" }}
-
+{{- if ne .chezmoi.osRelease.id "chimera" }}
+alias vi=nvim
 alias la='ls -la --color=auto' 2>/dev/null
 alias ll='ls -l --color=auto' 2>/dev/null
 alias l.='ls -d .* --color=auto' 2>/dev/null
 alias ls='ls --color=auto' 2>/dev/null
 	{{ else }}
-# Chimera currently doesn't support nvim wtih LuaJIY so use helix
+{{- /* Chimera currently doesn't support nvim with LuaJIT */ -}}
 alias vi=hx
-alias la='ls -la -G' 2>/dev/null
-alias ll='ls -l -G' 2>/dev/null
-alias l.='ls -d .* -G' 2>/dev/null
-alias ls='ls -G' 2>/dev/null
-	{{ end }}
-{{- end }}
+{{ end }}
 # dotfiles management
 alias cm=chezmoi
 
@@ -30,4 +23,3 @@ alias forkup="git pull --rebase upstream master"
 
 # processes
 alias pst="ps -o pid,ppid,stat,user,comm -AH"
-
