--- a/dot_alias.tmpl
+++ b/dot_alias.tmpl
@@ -19,7 +19,7 @@ alias forkup="git pull --rebase upstream master"
 alias pst="ps -o pid,ppid,stat,user,comm -AH"
 
 # editor
-{{- if eq .chezmoi.osRelease.id "chimera" }}
-{{- /* some current issues with neovim on chimera and I want to try hx */ -}}
+{{- if eq .chezmoi.osRelease.id "chimera" "void" -}}
+{{/* trying to migrate to hx but sure miss a file explorer */}}
 alias vi=hx
 {{ end }}
