--- a/dot_config/private_fish/conf.d/abbreviations.fish.tmpl
+++ b/dot_config/private_fish/conf.d/abbreviations.fish.tmpl
@@ -23,7 +23,7 @@ abbr -a pst ps -o pid,ppid,stat,user,comm -AH
 
 # system updates
 {{- if eq .chezmoi.osRelease.id "chimera" }}
-abbr -a update doas apk update && doas apk upgrade
+abbr -a update "doas apk update && doas apk upgrade"
 {{ end }}
 {{- if eq .chezmoi.osRelease.id "void" }}
 abbr -a update sudo xbps-install -Su
