--- a/dot_config/private_fish/conf.d/abbreviations.fish.tmpl
+++ b/dot_config/private_fish/conf.d/abbreviations.fish.tmpl
@@ -1,5 +1,5 @@
 # some things make more sense as an alias
-alias l. "ls -d .* --color=auto"
+alias l. "ls -d .*"
 
 # dotfiles management
 abbr -a cm chezmoi
@@ -12,6 +12,7 @@ abbr -a cme chezmoi edit
 abbr -a vi nvim
 
 # git
+abbr -a gl lazygit
 abbr -a gs git status
 abbr -a gc git commit
 abbr -a gu git pull
