feat: support opensuse tw and aeon

--- a/dot_alias.tmpl
+++ b/dot_alias.tmpl
@@ -20,7 +20,11 @@ alias pst="ps -o pid,ppid,stat,user,comm -AH"
 # system updates
 {{- if eq .chezmoi.osRelease.id "chimera" }}
 alias update="doas apk update && doas apk upgrade"
+alias make="cmake"
 {{ end }}
 {{- if eq .chezmoi.osRelease.id "void" }}
 alias update="sudo xbps-install -Su"
+{{ end }}
+{{- if eq .chezmoi.osRelease.id "opensuse-tumbleweed" "opensuse-aeon" }}
+alias update="sudo zypper dup"
 {{ end }}
