alias make->cmake on chimera

--- a/dot_config/private_fish/conf.d/abbreviations.fish.tmpl
+++ b/dot_config/private_fish/conf.d/abbreviations.fish.tmpl
@@ -21,3 +21,8 @@ abbr -a forkup git pull --rebase upstream master
 
 # processes
 abbr -a pst ps -o pid,ppid,stat,user,comm -AH
+
+
+{{- if eq .chezmoi.osRelease.id "chimera" }}
+alias make cmake
+{{- end }}
