--- a/dot_config/private_fish/functions/fish_prompt.fish.tmpl
+++ b/dot_config/private_fish/functions/fish_prompt.fish.tmpl
@@ -1,11 +1,17 @@
 function fish_prompt --description 'custom prompt'
     set -l last_status $status
 
+{{- if eq .chezmoi.osRelease.id "arch" }}
+    set -l hname (hostnamectl hostname)
+{{- else }}
+    set -l hname (hostname)
+{{- end }}
+
     if ! [ -z $CONTAINER_ID ]
         # fq hostname in distrobox
         echo -n -s (set_color $fish_color_user) "$USER" (set_color normal) @ (set_color $color_host) "$HOSTNAME.$CONTAINER_ID" (set_color normal)
     else
-        echo -n -s (set_color $fish_color_user) "$USER" (set_color normal) @ (set_color $color_host) (hostname) (set_color normal)
+        echo -n -s (set_color $fish_color_user) "$USER" (set_color normal) @ (set_color $color_host) "$hname" (set_color normal)
     end
 
     echo -n ':'
