--- a/dot_config/private_fish/conf.d/abbreviations.fish.tmpl
+++ b/dot_config/private_fish/conf.d/abbreviations.fish.tmpl
@@ -9,8 +9,8 @@ abbr -a cmcd chezmoi cd
 abbr -a cme chezmoi edit
 
 # editor
-abbr -a vi hx
-abbr -a vim hx
+abbr -a vi nvim
+abbr -a vim nvim
 
 # git
 abbr -a gl lazygit
