--- a/dot_profile.tmpl
+++ b/dot_profile.tmpl
@@ -6,7 +6,7 @@
 
 test -z "$PROFILEREAD" && . /etc/profile || true
 
-export EDITOR=/usr/bin/nvim
+export EDITOR=/usr/bin/hx
 
 # add path(s) for non-root
 if [ "$(id -u)" -ne 0 ]; then
