EDITOR and vi alias = hx

--- a/dot_alias.tmpl
+++ b/dot_alias.tmpl
@@ -8,7 +8,8 @@ alias ls='ls --color=auto' 2>/dev/null
 # dotfiles management
 alias cm=chezmoi
 # editor
-alias vi=nvim
+alias vi=hx
+alias vim=hx
 # git
 alias gs="git status"
 alias gc="git commit"
