--- a/dot_bashrc.tmpl
+++ b/dot_bashrc.tmpl
@@ -10,25 +10,24 @@ export EDITOR=hx
 
 {{- if eq .chezmoi.osRelease.id "void" "chimera" "arch" }}
 {{/*
-# set coloured prompts and window titles for
-# void/freebsd/chimera; openSUSE does this in /etc/...
-# TODO: cleanup. April 2024, applying to all
+# set coloured prompts and window titles for void/freebsd/chimera; openSUSE does
+# this in /etc/...
 */}}
 if [ "$(id -u)" -ne 0 ]; then
-	PS1='[\[\e[32m\]\u@\h \W\[\e[0m\]]\$ '
+    PS1='[\[\e[32m\]\u@\h \W\[\e[0m\]]\$ '
 else
-	PS1='[\[\e[31m\]\u@\h \w\[\e[0m\]]# ' #root
+    PS1='[\[\e[31m\]\u@\h \w\[\e[0m\]]# ' #root
 fi
 export PS1
 
 # set window titles
 case ${TERM} in
 st* | alacritty | foot | xterm* | rxvt* | kitty | kterm | gnome*)
-	PROMPT_COMMAND=${PROMPT_COMMAND:+$PROMPT_COMMAND; }'printf "\033]0;%s\007"   "${PWD/#$HOME/\~}"'
-	export COLORTERM=truecolor
-	;;
+    PROMPT_COMMAND=${PROMPT_COMMAND:+$PROMPT_COMMAND; }'printf "\033]0;%s\007"   "${PWD/#$HOME/\~}"'
+    export COLORTERM=truecolor
+    ;;
 tmux* | screen*)
-	PROMPT_COMMAND=${PROMPT_COMMAND:+$PROMPT_COMMAND; }'printf "\033]0;%s\007"   "tmux: ${PWD/#$HOME/\~}"'
-	;;
+    PROMPT_COMMAND=${PROMPT_COMMAND:+$PROMPT_COMMAND; }'printf "\033]0;%s\007"   "tmux: ${PWD/#$HOME/\~}"'
+    ;;
 esac
 {{- end }}
