--- a/dot_profile.tmpl
+++ b/dot_profile.tmpl
@@ -10,9 +10,11 @@ export EDITOR=/usr/bin/hx
 
 # add path(s) for non-root
 if [ "$(id -u)" -ne 0 ]; then
+    PATH="$PATH:$HOME/.local/bin"
     mkdir -p "$HOME/go/bin"
     PATH="$PATH:$HOME/go/bin"
-    PATH="$PATH:$HOME/.local/bin"
+    mkdir -p "$HOME/.cargo/bin"
+    PATH="$PATH:$HOME/.cargo/bin"
     export PATH
     if [ -f "$HOME/.env" ]; then
         . "$HOME/.env"
