--- a/dot_config/private_fish/conf.d/abbreviations.fish.tmpl
+++ b/dot_config/private_fish/conf.d/abbreviations.fish.tmpl
@@ -6,6 +6,12 @@ alias l. "ls -d .*"
 {{- else }}
 abbr -a doas sudo
 {{- end}}
+{{- if eq .chezmoi.osRelease.id "chimera" }}
+abbr pkg apk
+{{- end}}
+{{- if eq .chezmoi.osRelease.id "freebsd" }}
+abbr apk pkg
+{{- end}}
 
 # dotfiles management
 abbr -a cm chezmoi
@@ -24,4 +30,3 @@ abbr -a forkup git pull --rebase upstream master
 
 # processes
 abbr -a pst ps -o pid,ppid,stat,user,comm -AH
-# abbr -a update doas apk update && doas apk upgrade
