prepare for merge

--- a/dot_config/waybar/oldconfig.jsonc.tmpl
+++ b/dot_config/waybar/oldconfig.jsonc.tmpl
@@ -1,3 +1,4 @@
+{{- if ne .chezmoi.osRelease.id "opensuse-tumbleweed" }}
 {
   // See: https://github.com/Alexays/Waybar/wiki/Module:-Custom:-Simple
   //      https://github.com/Alexays/Waybar/wiki/Module:-River
@@ -191,3 +192,4 @@
   //   "escape": true
   // }
 }
+{{- end }}
