--- a/dot_config/distrobox/distrobox.conf.tmpl
+++ b/dot_config/distrobox/distrobox.conf.tmpl
@@ -1,4 +1,7 @@
-# container_image_default="chimeralinux/chimera"
-# container_name="chimera"
-# container_image_default="archlinux:latest"
-# container_name="archbox"
+{{- if eq .chezmoi.osRelease.id "void" "opensuse-tumbleweed" }}
+container_image_default="docker.io/library/archlinux:latest"
+container_name="arch"
+{{- else if eq .chezmoi.osRelease.id "chimera" }}
+container_image_default="chimeralinux/chimera"
+container_name="chimera"
+{{- end }}
