--- a/dot_config/swayidle/config.tmpl
+++ b/dot_config/swayidle/config.tmpl
@@ -7,13 +7,11 @@
 timeout 1200 'swaylock -f -c 000000'
 timeout 1500 'wlopm --off DP-1 --off DP-2' resume 'wlopm --on DP-1 --on DP-2'
 # not configuring S3 suspend for always-on-elron
-
 {{- else if eq .chezmoi.hostname "hoppy" "lapin" }}
-# laptop
+# laptops
 timeout 300 'swaylock -f -c 000000'
 timeout 360 'wlopm --off eDP-1' resume 'wlopm --on eDP-1'
 before-sleep 'swaylock -f -c 000000'
-
 {{- else }}
 # unknown machine - update template
 timeout 300 'swaylock -f -c 000000'
@@ -23,12 +21,6 @@ timeout 300 'swaylock -f -c 000000'
 # Note: S3 not available on Dell Latitude 7420 and FreeBSD currently doesn't support S0/S4.
 # timeout 420 'acpiconf -s 3' resume 'wlopm --on eDP-1'
 {{- else if eq .chezmoi.os "linux" }}
-	{{- if eq .chezmoi.osRelease.id "opensuse-tumbleweed" "arch" "fedora" }}
-timeout 420 'systemctl suspend' resume 'wlopm --on eDP-1'
-	{{- else if eq .chezmoi.osRelease.id "void" }}
-timeout 420 'zzz' resume 'wlopm --on eDP-1'
-	{{- else if eq .chezmoi.osRelease.id "chimera" }}
-# TODO, add suspend
-	{{- end }}
+timeout 420 'loginctl suspend' resume 'wlopm --on eDP-1'
 {{- end }}
 
