--- a/dot_config/swayidle/config.tmpl
+++ b/dot_config/swayidle/config.tmpl
@@ -21,8 +21,10 @@ timeout 300 'swaylock -f -c 000000'
 # Note: S3 not available on Dell Latitude 7420 and FreeBSD currently doesn't support S0/S4.
 # timeout 420 'acpiconf -s 3' resume 'wlopm --on eDP-1'
 {{- else if eq .chezmoi.os "linux" }}
-{{-   if eq .chezmoi.osRelease.id "chimera" "void" }}
+{{-   if eq .chezmoi.osRelease.id "chimera" }}
 timeout 420 'loginctl suspend' resume 'wlopm --on eDP-1'
+{{-   else if eq .chezmoi.osRelease.id "void" }}
+timeout 420 'doas zzz' resume 'wlopm --on eDP-1'
 {{-   else if eq .chezmoi.osRelease.id "arch" "opensuse-tumbleweed" }}
 timeout 420 'systemctl suspend' resume 'wlopm --on eDP-1'
 {{-   end }}
