--- a/dot_config/swayidle/config.tmpl
+++ b/dot_config/swayidle/config.tmpl
@@ -6,7 +6,6 @@
 # desktop
 timeout 1200 'swaylock -f -c 000000'
 timeout 1500 'wlopm --off DP-1 --off DP-2' resume 'wlopm --on DP-1 --on DP-2'
-# not configuring S3 suspend for always-on-elron
 {{- else if eq .chezmoi.hostname "hoppy" "lapin" }}
 # laptops
 timeout 300 'swaylock -f -c 000000'
@@ -22,7 +21,11 @@ timeout 300 'swaylock -f -c 000000'
 # timeout 420 'acpiconf -s 3' resume 'wlopm --on eDP-1'
 {{- else if eq .chezmoi.os "linux" }}
 {{-   if eq .chezmoi.osRelease.id "chimera" "void"}}
+{{-     if eq .chezmoi.hostname "elron" "wabbit" }}
+# not configuring suspend for always-on-machines
+{{-     else }}
 timeout 420 'loginctl suspend' resume 'wlopm --on eDP-1'
+{{-     end }}
 {{-   else if eq .chezmoi.osRelease.id "arch" "opensuse-tumbleweed" }}
 timeout 420 'systemctl suspend' resume 'wlopm --on eDP-1'
 {{-   end }}
