debugging what was a stdlib locale issue

--- a/dot_config/waybar/config.jsonc.tmpl
+++ b/dot_config/waybar/config.jsonc.tmpl
@@ -63,7 +63,7 @@
     "spacing": 10
   },
   "clock": {
-    // "timezone": "America/New_York",
+    "timezone": "Canada/Pacific",
     "format": "{:%a %d %b %H:%M}",
     "tooltip-format": "<span color='#35b9ab'><tt><small>{calendar}</small></tt></span>",
     "calendar": {
