--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -1,7 +1,7 @@
 * {
   border: none;
   border-radius: 0;
-  font-family: "Roboto", "FontAwesome 6 Free";
+  font-family: "Inter", "Roboto", "FontAwesome 6 Free";
   font-size: 15px;
   box-shadow: none;
   text-shadow: none;
