--- a/dot_config/waybar/config.jsonc.tmpl
+++ b/dot_config/waybar/config.jsonc.tmpl
@@ -43,14 +43,6 @@
     "on-click": "exec foot -e sh -c 'update; pkill -SIGRTMIN+8 waybar'",
     "signal": 8
   },
-  "custom/zypper": {
-    "format": "{} ",
-    "interval": 3600,
-    "exec": "zypper lu | grep 'v \\+|' | wc -l; echo 'packages to update'",
-    "exec-if": "exit 0",
-    "on-click": "exec foot -e sudo sh -c 'zypper ref; zypper dup; pkill -SIGRTMIN+8 waybar'",
-    "signal": 8
-  },
   "idle_inhibitor": {
     "format": "{icon}",
     "format-icons": {
@@ -63,27 +55,27 @@
     "spacing": 10
   },
   "clock": {
-    "timezone": "Canada/Pacific",
     "format": "{:%a %d %b %H:%M}",
-    "tooltip-format": "<span color='#35b9ab'><tt><small>{calendar}</small></tt></span>",
-    "calendar": {
-      "mode-mon-col": 4,
-      "weeks-pos": "left",
-      "on-scroll": 1,
-      "on-click-right": "mode",
-      "format": {
-        "months": "<span color='#35b9ab'><b>{}</b></span>",
-        "weeks": "<span color='#73ba25'><b>{}</b></span>",
-        "weekdays": "<span color='#21a4df'><b>{}</b></span>",
-        "today": "<span color='#21a4df'><b><u>{}</u></b></span>"
-      }
-    },
-    "actions": {
-      "on-click-right": "mode",
-      "on-scroll-up": "shift_up",
-      "on-scroll-down": "shift_down"
-    },
     "interval": 10
+    # TODO: track down bug below:
+    # "tooltip-format": "<span color='#35b9ab'><tt><small>{calendar}</small></tt></span>",
+    # "calendar": {
+    #   "mode-mon-col": 4,
+    #   "weeks-pos": "left",
+    #   "on-scroll": 1,
+    #   "on-click-right": "mode",
+    #   "format": {
+    #     "months": "<span color='#35b9ab'><b>{}</b></span>",
+    #     "weeks": "<span color='#73ba25'><b>{}</b></span>",
+    #     "weekdays": "<span color='#21a4df'><b>{}</b></span>",
+    #     "today": "<span color='#21a4df'><b><u>{}</u></b></span>"
+    #   }
+    # },
+    # "actions": {
+    #   "on-click-right": "mode",
+    #   "on-scroll-up": "shift_up",
+    #   "on-scroll-down": "shift_down"
+    # },
   },
   "cpu": {
     "format": "{usage}% ",
@@ -157,7 +149,7 @@
     "on-click": "bluetooth toggle; pkill -SIGRTMIN+8 waybar",
     "on-click-right": "exec alacritty -e sh -c 'bluetoothctl'"
   },
-  "pulseaudio": {
+  "wireplumber": {
     "format": "{icon}",
     "format-alt": "{volume} {icon}",
     "format-alt-click": "click-right",
@@ -176,8 +168,8 @@
       ]
     },
     "scroll-step": 10,
-    "on-click": "pactl set-sink-mute @DEFAULT_SINK@ toggle",
-    "on-click-right": "pavucontrol",
+    "on-click": "wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle",
+    # "on-click-right": "pavucontrol",
     "tooltip": false
   },
   "custom/scratchpad": {
