--- a/dot_config/waybar/config.jsonc.tmpl
+++ b/dot_config/waybar/config.jsonc.tmpl
@@ -57,25 +57,6 @@
   "clock": {
     "format": "{:%a %d %b %H:%M}",
     "interval": 10
-    # TODO: track down bug below:
-    # "tooltip-format": "<span color='#35b9ab'><tt><small>{calendar}</small></tt></span>",
-    # "calendar": {
-    #   "mode-mon-col": 4,
-    #   "weeks-pos": "left",
-    #   "on-scroll": 1,
-    #   "on-click-right": "mode",
-    #   "format": {
-    #     "months": "<span color='#35b9ab'><b>{}</b></span>",
-    #     "weeks": "<span color='#73ba25'><b>{}</b></span>",
-    #     "weekdays": "<span color='#21a4df'><b>{}</b></span>",
-    #     "today": "<span color='#21a4df'><b><u>{}</u></b></span>"
-    #   }
-    # },
-    # "actions": {
-    #   "on-click-right": "mode",
-    #   "on-scroll-up": "shift_up",
-    #   "on-scroll-down": "shift_down"
-    # },
   },
   "cpu": {
     "format": "{usage}% ",
@@ -169,7 +150,7 @@
     },
     "scroll-step": 10,
     "on-click": "wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle",
-    # "on-click-right": "pavucontrol",
+    // "on-click-right": "pavucontrol",
     "tooltip": false
   },
   "custom/scratchpad": {
