--- a/dot_config/waybar/config.jsonc.tmpl
+++ b/dot_config/waybar/config.jsonc.tmpl
@@ -31,6 +31,38 @@
     "clock",
     "custom/notification"
   ],
+{{- if eq .chezmoi.osRelease.id "chimera" "freebsd" }}
+  // chimera & freebsd support only basic clock functions
+  "clock": {
+    "format": "{:%a %d %b %H:%M}",
+    "interval": 1
+  },
+{{- else }}
+    "clock": {
+    "timezone": "Canada/Pacific",
+    "format": "{:%a %d %b %H:%M}",
+    "tooltip-format": "<span color='#35b9ab'><tt><small>{calendar}</small></tt></span>",
+    "calendar": {
+      "mode-mon-col": 4,
+      "weeks-pos": "left",
+      "on-scroll": 1,
+      "on-click-right": "mode",
+      "format": {
+        "months": "<span color='#35b9ab'><b>{}</b></span>",
+        "weeks": "<span color='#73ba25'><b>{}</b></span>",
+        "weekdays": "<span color='#21a4df'><b>{}</b></span>",
+        "today": "<span color='#21a4df'><b><u>{}</u></b></span>"
+      }
+    },
+    "actions": {
+      "on-click-right": "mode",
+      "on-scroll-up": "shift_up",
+      "on-scroll-down": "shift_down"
+    },
+    "interval": 1
+  },
+{{- end }}
+
   "custom/layout": {
     "tooltip": false,
     "exec": "swaymsg -mrt subscribe '[\"input\"]' | jq -r --unbuffered \"select(.change == \\\"xkb_layout\\\") | .input | select(.type == \\\"keyboard\\\") | .xkb_active_layout_name | .[0:2]\""
@@ -53,10 +85,6 @@
   "tray": {
     // "icon-size": 21,
     "spacing": 10
-  },
-  "clock": {
-    "format": "{:%a %d %b %H:%M}",
-    "interval": 10
   },
   "cpu": {
     "format": "{usage}% ",
