--- a/dot_config/waybar/config.jsonc.tmpl
+++ b/dot_config/waybar/config.jsonc.tmpl
@@ -1,45 +1,53 @@
 {
-  "layer": "top", // Waybar at top layer
-  // "position": "bottom", // Waybar position (top|bottom|left|right)
-  "height": 30, // Waybar height (to be removed for auto height)
-  // "width": 1280, // Waybar width
-  // "gtk-layer-shell": "false",
-  // Choose the order of the modules
+  "layer": "top",
+  "position": "top",
+  "height": 30, // remove for auto height
   "modules-left": [
     "river/tags"
-    // , 
-    // "custom/scratchpad"
   ],
   "modules-center": [
     "river/window"
   ],
   "modules-right": [
     "custom/checkupdates",
-    {{- if eq .chezmoi.os "linux" }}
     "network",
-    {{- end }}
-    // "bluetooth", 
-    // "cpu", "memory", 
-    // "temperature", 
-    // "backlight", 
-    {{- if eq .chezmoi.os "linux" }}
+    "custom/wg",
     "battery",
-    // "battery#bat2", 
-    {{- end }}
-    "pulseaudio",
-    // "custom/layout", 
-    "clock",
-    "custom/notification"
+    "wireplumber",
+    "custom/notification",
+    "clock"
   ],
+  "battery": {
+    "states": {
+      "good": 80,
+      "warning": 30,
+      "critical": 15
+    },
+    "format": "{icon}",
+    "format-charging": "󰂄",
+    "format-plugged": "",
+    "tooltip-format": "󰁹 {capacity}% {time} {power:0.1f}W",
+    "format-icons": [
+      "󰂎",
+      "󰁺",
+      "󰁻",
+      "󰁼",
+      "󰁽",
+      "󰁾",
+      "󰁿",
+      "󰂀",
+      "󰂁",
+      "󰂂",
+      "󰁹"
+    ]
+  },
 {{- if eq .chezmoi.osRelease.id "chimera" "freebsd" }}
-  // chimera & freebsd support only basic clock functions
   "clock": {
     "format": "{:%a %d %b %H:%M}",
     "interval": 1
   },
 {{- else }}
     "clock": {
-    "timezone": "Canada/Pacific",
     "format": "{:%a %d %b %H:%M}",
     "tooltip-format": "<span color='#35b9ab'><tt><small>{calendar}</small></tt></span>",
     "calendar": {
@@ -62,101 +70,43 @@
     "interval": 1
   },
 {{- end }}
-
-  "custom/layout": {
-    "tooltip": false,
-    "exec": "swaymsg -mrt subscribe '[\"input\"]' | jq -r --unbuffered \"select(.change == \\\"xkb_layout\\\") | .input | select(.type == \\\"keyboard\\\") | .xkb_active_layout_name | .[0:2]\""
-  },
   "custom/checkupdates": {
-    "format": "{} ",
+    "format": "{}",
     "interval": 3600,
-    "exec": "echo $(checkupdates)",
-    "exec-if": "exit 0",
-    "on-click": "exec foot -e sh -c 'update; pkill -SIGRTMIN+8 waybar'",
-    "signal": 8
+    "exec-if": "which checkupdates",
+    "exec": "checkupdates",
+    "tooltip-format": "󰔽 updates available"
   },
-  "idle_inhibitor": {
+  "custom/notification": {
+    "tooltip": true,
     "format": "{icon}",
     "format-icons": {
-      "activated": "",
-      "deactivated": ""
-    }
-  },
-  "tray": {
-    // "icon-size": 21,
-    "spacing": 10
-  },
-  "cpu": {
-    "format": "{usage}% ",
-    "tooltip": false
-  },
-  "memory": {
-    "format": "{}% "
-  },
-  "temperature": {
-    // "thermal-zone": 2,
-    // "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
-    "critical-threshold": 80,
-    // "format-critical": "{temperatureC}°C {icon}",
-    "format": "{temperatureC}°C {icon}",
-    "format-icons": [
-      "",
-      "",
-      ""
-    ]
-  },
-  "backlight": {
-    // "device": "acpi_video1",
-    "format": "{percent}% {icon}",
-    "format-icons": [
-      "",
-      ""
-    ]
-  },
-  "battery": {
-    "states": {
-      // "good": 95,
-      "warning": 30,
-      "critical": 15
+      "notification": "<span foreground='red'><small><sup>⬤</sup></small></span>",
+      "none": "󰂚 ",
+      "dnd-notification": "<span foreground='red'><small><sup>⬤</sup></small></span>",
+      "dnd-none": "󰂛"
     },
-    "format": "{icon}",
-    "format-charging": "",
-    "format-plugged": "",
-    "format-alt": "{capacity}% {time} {power:0.1f}W",
-    "format-icons": [
-      "",
-      "",
-      "",
-      "",
-      ""
-    ]
+    "return-type": "json",
+    "exec-if": "which swaync-client",
+    "exec": "swaync-client -swb",
+    "on-click": "swaync-client -t -sw",
+    "on-click-right": "swaync-client -d -sw",
+    "escape": true
   },
-  "battery#bat2": {
-    "bat": "BAT2"
+  "custom/wg": {
+    "signal": 9,
+    "format": "{}",
+    "exec": "ip add show | grep -qF wg0 && echo 󰦝 || echo 󱦛",
+    "on-click": "wgtoggle",
+    "tooltip-format": "󰦝 toggle wireguard vpn"
   },
   "network": {
     // "interface": "wlp2*", // (Optional) To force the use of this interface
-    "format-wifi": "",
-    "format-ethernet": "",
-    "format-linked": "",
+    "format-wifi": "󰖩",
+    "format-ethernet": "󰛳",
+    "format-linked": "󰲛",
     "format-disconnected": "⚠",
-    "format-alt": "{ifname} {essid} ({signalStrength}%)"
-  },
-  "bluetooth": {
-    "format": "",
-    "format-disabled": "",
-    "format-off": "",
-    "format-connected": " {num_connections}",
-    // "format-connected": " {device_alias}",
-    "tooltip-format": "{controller_address} {status}\n\n{num_connections} connected",
-    "tooltip-format-disabled": "{status}",
-    "tooltip-format-connected": "{controller_address}\n\n{num_connections} connected\n\n{device_enumerate}",
-    "tooltip-format-enumerate-connected": "{device_alias}\t{device_address}",
-    "format-connected-battery": " {device_alias} {device_battery_percentage}%",
-    "tooltip-format-enumerate-connected-battery": "{device_alias}\t{device_address}\t{device_battery_percentage}%",
-    // "format-device-preference": [ "device1", "device2" ], // preference list deciding the displayed device
-    "on-click": "bluetooth toggle; pkill -SIGRTMIN+8 waybar",
-    "on-click-right": "exec alacritty -e sh -c 'bluetoothctl'"
+    "tooltip-format": "󰖩 {ifname} {essid} ({signalStrength}%)"
   },
   "wireplumber": {
     "format": "{icon}",
@@ -180,30 +130,5 @@
     "on-click": "wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle",
     // "on-click-right": "pavucontrol",
     "tooltip": false
-  },
-  "custom/scratchpad": {
-    "format-text": "{}",
-    "return-type": "json",
-    "interval": 3,
-    "exec": "/usr/share/openSUSEway/helpers/scratchpad-indicator.sh 2> /dev/null",
-    "exec-if": "exit 0",
-    "on-click": "swaymsg 'scratchpad show'",
-    "on-click-right": "swaymsg 'move scratchpad'"
-  },
-  "custom/notification": {
-    "tooltip": true,
-    "format": "{icon}",
-    "format-icons": {
-      "notification": "<span foreground='red'><small><sup>⬤</sup></small></span>",
-      "none": " ",
-      "dnd-notification": "<span foreground='red'><small><sup>⬤</sup></small></span>",
-      "dnd-none": " "
-    },
-    "return-type": "json",
-    "exec-if": "which swaync-client",
-    "exec": "swaync-client -swb",
-    "on-click": "swaync-client -t -sw",
-    "on-click-right": "swaync-client -d -sw",
-    "escape": true
   }
 }
