cleanup, ready to use.

--- a/dot_config/waybar/config.jsonc.tmpl
+++ b/dot_config/waybar/config.jsonc.tmpl
@@ -1,3 +1,4 @@
+// Waybar config for the River window manager
 {
   "layer": "top",
   "position": "top",
@@ -10,12 +11,12 @@
   ],
   "modules-right": [
     "custom/checkupdates",
-    "network",
-    "custom/wg",
-    "battery",
     "wireplumber",
-    "custom/notification",
-    "clock"
+    "battery",
+    "custom/wg",
+    "network",
+    "clock",
+    "custom/notification"
   ],
   "battery": {
     "states": {
