tweaks; avoid checkupdates endless loop

--- a/dot_config/waybar/config.jsonc.tmpl
+++ b/dot_config/waybar/config.jsonc.tmpl
@@ -73,6 +73,7 @@
   },
 {{- end }}
   "custom/checkupdates": {
+    "signal": 8, // called by script: update
     "format": "{}",
     "interval": 3600,
     "exec-if": "which checkupdates",
