--- a/dot_config/waybar/config.jsonc.tmpl
+++ b/dot_config/waybar/config.jsonc.tmpl
@@ -79,7 +79,7 @@
     "exec-if": "which checkupdates",
     "exec": "checkupdates",
     "on-click": "checkupdates",
-    "tooltip-format": "{} updates available"
+    "tooltip-format": "{} click to check for updates"
   },
   "custom/notification": {
     "tooltip": true,
