--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -1,7 +1,7 @@
 * {
   border: none;
   border-radius: 0;
-  font-family: "Roboto", "FontAwesome 6 Free", "sans";
+  font-family: "Roboto", "RobotoMono Nerd Font", "sans";
   font-size: 16px;
   box-shadow: none;
   text-shadow: none;
@@ -48,7 +48,7 @@ window#waybar {
 }
 
 #custom-checkupdates {
-  margin: 0 0.5em;
+  margin: 0 0.4em;
 }
 
 #clock {
