reduce update checks. cached anyway but..

--- a/dot_config/waybar/config.jsonc.tmpl
+++ b/dot_config/waybar/config.jsonc.tmpl
@@ -75,7 +75,7 @@
   "custom/checkupdates": {
     "signal": 8, // called by script: update
     "format": "{}",
-    "interval": 3600,
+    "interval": 21600, // 6 hours
     "exec": "checkupdates",
     "on-click": "foot sh -c update",
     "tooltip-format": "{} click to check for updates"
