--- a/dot_config/distrobox/distrobox.conf.tmpl
+++ b/dot_config/distrobox/distrobox.conf.tmpl
@@ -1,10 +1,8 @@
+container_name="base"
 {{- if eq .chezmoi.osRelease.id "void"}}
 container_image_default="docker.io/library/archlinux:latest"
-container_name="arch"
 {{- else if eq .chezmoi.osRelease.id "opensuse-tumbleweed"}}
 container_image_default="registry.opensuse.org/opensuse/tumbleweed:latest"
-container_name="tw"
 {{- else if eq .chezmoi.osRelease.id "chimera"}}
 container_image_default="chimeralinux/chimera"
-container_name="chimera"
 {{end}}
